bugfix : fix overflow on user page

--- a/frontend/src/user_page/user_page.css
+++ b/frontend/src/user_page/user_page.css
@@ -1,7 +1,7 @@
 :root{
     --header-height : 50px;
     --header-button-height : 28px;
-    --content-height : calc(100vh - var(--header-height));
+    --content-height : calc(100% - 53px);
     --avatar-size : 300px;
 }
 
@@ -65,7 +65,7 @@
 /* --------------------- content header 分界线 ----------------- */
 
 .user-page-container .content-container{
-    margin-top:3px;
+    margin: 3px 0 0 0;
     position: absolute;
     width: 100%;
     height: var(--content-height);
